--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "stripe/stripe-php": "^16.6",
-        "tymon/jwt-auth": "^2.2"
+        "tymon/jwt-auth": "^2.2",
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "barryvdh/laravel-dompdf": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
